# easyeda2kicad.py

./: .envrc  README.md  pyproject.toml
easyeda2kicad/easyeda/: easyeda_importer.py  metadata_providers.py  parameters_easyeda.py
easyeda2kicad/kicad/: export_kicad_symbol.py  parameters_kicad_symbol.py
