[tool.poetry]
name = "easyeda2kicad"
version = "0.1.0"
description = ""
authors = ["Dane Lowe <dane.r.lowe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^2.17.0"
pydantic = "^1.5"
requests = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
easyeda2kicad = 'easyeda2kicad.__main__:main'

[tool.black]
line-length = 88
preview = true

[tool.isort]
profile = "black"
extend_skip = [".md", ".json", ".po", ".mo",".html", ".js", ".css", ".rst"]
skip_glob = ["env/*"]
known_local_folder = ["core"]
import_heading_stdlib="Global imports"
import_heading_localfolder="Local imports"

[tool.pycln]
include=".*\\.py$"
exclude="(.eggs|.git|.hg|.mypy_cache|__pycache__|.nox|.tox|.venv|.svn|buck-out|build|dist|env|)/"

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_expr = false
disallow_untyped_calls = false
ignore_errors = false
show_error_codes = true
pretty = true

[tool.pylint.master]
output-format = "colorized"
extension-pkg-whitelist = [
    "pydantic"
]
ignore="(.eggs|.git|.hg|.mypy_cache|__pycache__|.nox|.tox|.venv|.svn|buck-out|build|dist|env|)/"

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "wrong-import-order",
    "method-hidden",
    "too-many-lines",
    "wildcard-import",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "logging-fstring-interpolation",


]

[tool.bandit]
# tests = ["B201", "B301"]
skips = []